--- a/Android application/app/src/main/res/values/strings.xml
+++ b/Android application/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NOAN android application</string>
-    <string name="browse_title">Videos by Your Company</string>
+    <string name="browse_title">Veuillez choisir votre source</string>
     <string name="related_movies">Related Videos</string>
     <string name="grid_view">Grid View</string>
     <string name="error_fragment">Error Fragment</string>
